--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -1,9 +1,10 @@
+--extra-index-url=${PIP_EXTRA_INDEX_URL}
+
 # api
 flask==1.0.2
 
 # schema validation
 marshmallow==2.17.0
 
-# local regression_model package
-# update with your local path
--e "C:\Users\Dell\Desktop\cours-A61\cours-A61\packages\regression_model"
+# Install from gemfury
+regression-model==0.1.0
